Fixed button background colour leaking behind border

--- a/app/assets/stylesheets/main/style.css.scss
+++ b/app/assets/stylesheets/main/style.css.scss
@@ -18,6 +18,9 @@
   border: 2px solid $color;
   display: inline-block;
   font-size: 1rem;
+  -webkit-background-clip: padding-box; 
+  -moz-background-clip: padding; 
+  background-clip: padding-box;
   &:hover{
     background-color: $color;
     color: #fff;
